--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "4.0.0-beta.3",
     "@types/node": "^22.13.14",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.1.6",
-    "postcss": "^8.5.3",
+    "postcss": "^8.4.35",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "4.0.0-beta.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.8.2"
   }
 }
